[fix] set a z-index to mobile navbar

--- a/src/components/Navbar/MobileNavbar/MobileNavbar.module.css
+++ b/src/components/Navbar/MobileNavbar/MobileNavbar.module.css
@@ -3,7 +3,7 @@
 }
 
 .PopoverPanel {
-  @apply absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden;
+  @apply absolute z-10 top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden;
 }
 
 .Menu {
